<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="#8A4B08"
    android:padding="10dp"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:text="Scabies"

            android:textColor="#FF0000"
            android:textSize="22sp"
            android:layout_gravity="center"
            android:gravity="center"

            android:layout_height="wrap_content" />
        <View
            android:layout_width="match_parent"
            android:background="#0101DF"
            android:layout_height="5dp"/>



        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:textSize="18sp"
            android:textColor="#FFFFFF"
            android:id="@+id/tv_disease_rx_title"
            android:text="Disease Rx:"
            android:layout_height="wrap_content" />
        <View
            android:layout_width="95dp"
            android:background="#585858"
            android:layout_height="3dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:text="@string/scabies_Rx"
            android:textColor="@color/txtColor"
            android:id="@+id/tv_disease_rx"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="wrap_content"
            android:text="Disease Investigation:"

            android:textSize="18sp"
            android:textColor="#FFFFFF"
            android:id="@+id/tv_disease_investigation_title"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"/>
        <View
            android:layout_width="175dp"
            android:background="#585858"
            android:layout_height="3dp"/>


        <TextView
            android:layout_width="wrap_content"
            android:text="@string/scabies_investigation"
            android:textColor="@color/txtColor"
            android:id="@+id/tv_disease_investigation_details"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_marginTop="10dp"
            android:id="@+id/tv_disease_advice_title"
            android:layout_width="wrap_content"
            android:text="Disease Advice:"
            android:textSize="18sp"
            android:textColor="#FFFFFF"

            android:layout_height="wrap_content" />
        <View
            android:layout_width="125dp"
            android:background="#585858"
            android:layout_height="3dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:id="@+id/tv_disease_advice_details"
            android:text="@string/scabies_advice"
            android:textColor="@color/txtColor"

            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_marginTop="10dp"
            android:id="@+id/tv_disease_note_title"
            android:text="disease Note:"
            android:textSize="18sp"
            android:textColor="#FFFFFF"

            android:layout_height="wrap_content" />
        <View
            android:layout_width="115dp"
            android:background="#585858"
            android:layout_height="3dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:id="@+id/tv_disease_note_details"
            android:text="@string/scabies_note"
            android:textColor="@color/txtColor"

            android:layout_height="wrap_content" />




        <View
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:background="#0101DF"
            android:layout_height="5dp"/>

    </LinearLayout>

</ScrollView>
