<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@drawable/bc"
    android:padding="10dp"
    android:layout_height="match_parent"
    android:fillViewport="false"
    android:id="@+id/scrollView">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:text="Acute Miocardial Infarction (AMI)"

            android:textColor="#FF0000"
            android:textSize="22sp"
            android:layout_gravity="center"
            android:gravity="center"

            android:layout_height="wrap_content" />
        <View
            android:layout_width="match_parent"
            android:background="#0101DF"
            android:layout_height="5dp"/>



        <TextView
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:textSize="18sp"

            android:textColor="@color/textHeading"
            android:id="@+id/tv_disease_rx_title"
            android:text="Disease Rx:"
            android:layout_height="wrap_content" />
        <View
            android:layout_width="match_parent"
            android:background="#585858"
            android:layout_height="3dp"/>

        <TextView
            android:layout_width="match_parent"
            android:textColor="@color/txtColor"
            android:background="#D8D8D8"
            android:padding="5dp"
            android:id="@+id/tv_disease_rx"
            android:text="@string/acute_miocardial_infarction_Rx"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="match_parent"
            android:id="@+id/tv_disease_investigation_title"
            android:text="Disease Investigation:"
            android:textSize="18sp"
            android:textColor="@color/textHeading"
            android:layout_marginTop="15dp"
            android:layout_height="wrap_content" />
        <View
            android:layout_width="match_parent"
            android:background="#585858"
            android:layout_height="3dp"/>


        <TextView
            android:layout_width="match_parent"
            android:textColor="@color/txtColor"
            android:background="#D8D8D8"
            android:padding="5dp"
            android:id="@+id/tv_disease_investigation_details"
            android:text="@string/acute_miocardial_infarction_investigation"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:text="Disease Advice:"
            android:layout_marginTop="15dp"

            android:id="@+id/tv_disease_advice_title"
            android:textSize="18sp"
            android:textColor="@color/textHeading"

            android:layout_height="wrap_content" />
        <View
            android:layout_width="match_parent"
            android:background="#585858"
            android:layout_height="3dp"/>

        <TextView
            android:layout_width="match_parent"
            android:background="#D8D8D8"
            android:padding="5dp"
            android:id="@+id/tv_disease_advice_details"
            android:text="@string/acute_miocardial_infarction_advice"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:text="Disease Note:"
            android:layout_marginTop="15dp"

            android:id="@+id/tv_disease_note_title"
            android:textSize="18sp"
            android:textColor="@color/textHeading"

            android:layout_height="wrap_content" />
        <View
            android:layout_width="match_parent"
            android:background="#585858"
            android:layout_height="3dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:background="#D8D8D8"
            android:padding="5dp"
            android:id="@+id/tv_disease_note_details"
            android:text="@string/acute_miocardial_infarction_note"
            android:textColor="@color/txtColor"
            android:layout_height="wrap_content" />






    </LinearLayout>

</ScrollView>
